--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ reqwest = { version = "0.11", default-features = false, optional = true }
 log = { version = "0.4", default-features = false, optional = true }
 
 [features]
-default = ["with_reqwest"]
+default = []
 with_reqwest = ["reqwest", "log"]
