--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ features = ["blocking", "with_reqwest", "with_reqwest_blocking"]
 [dependencies]
 async-trait = "0.1"
 prometheus = "0.13"
+url = "2.4"
 reqwest = { version = "0.11", default-features = false, optional = true }
 log = { version = "0.4", default-features = false, optional = true }
 
