--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,17 @@ repository = "https://github.com/maoertel/prometheus-push"
 features = ["blocking", "with_reqwest", "with_reqwest_blocking"]
 
 [dependencies]
-async-trait = "0.1"
-prometheus = "0.13"
 url = "2.4"
+async-trait = { version = "0.1", optional = true }
+prometheus = {version = "0.13", optional = true }
 reqwest = { version = "0.11", default-features = false, optional = true }
 log = { version = "0.4", default-features = false, optional = true }
 
 [features]
-default = ["with_reqwest", "with_reqwest_blocking"]
+# default = ["async", "blocking", "prometheus_crate", "with_reqwest", "with_reqwest_blocking"]
+default = ["async"]
+async = ["async-trait"]
 blocking = []
-with_reqwest = ["reqwest", "log"]
+prometheus_crate = ["prometheus"]
+with_reqwest = ["async", "reqwest", "log"]
 with_reqwest_blocking = ["blocking", "reqwest/blocking", "log"]
