--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "prometheus_push"
 version = "0.2.1"
 edition = "2021"
 authors = ["Mathias Oertel <mathias.oertel@pm.me>"]
-description = "Crate to extends the prometheus crate with async pushgateway support"
+description = "Crate to extends prometheus crates with pushgateway support"
 documentation = "https://docs.rs/prometheus_push"
 readme = "README.md"
 keywords = ["prometheus", "pushgateway", "metrics", "oberservability"]
@@ -14,14 +14,16 @@ repository = "https://github.com/maoertel/prometheus-push"
 features = ["blocking", "with_reqwest", "with_reqwest_blocking"]
 
 [dependencies]
-async-trait = "0.1"
-prometheus = "0.13"
 url = "2.4"
+async-trait = { version = "0.1", optional = true }
+prometheus = {version = "0.13", optional = true }
 reqwest = { version = "0.11", default-features = false, optional = true }
 log = { version = "0.4", default-features = false, optional = true }
 
 [features]
-default = []
+default = ["non_blocking"]
+non_blocking = ["async-trait"]
 blocking = []
-with_reqwest = ["reqwest", "log"]
+prometheus_crate = ["prometheus"]
+with_reqwest = ["non_blocking", "reqwest", "log"]
 with_reqwest_blocking = ["blocking", "reqwest/blocking", "log"]
