--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "prometheus_push"
 version = "0.2.1"
 edition = "2021"
 authors = ["Mathias Oertel <mathias.oertel@pm.me>"]
-description = "Crate to extends prometheus crates with pushgateway support"
+description = "Crate to extend prometheus crates with pushgateway support"
 documentation = "https://docs.rs/prometheus_push"
 readme = "README.md"
 keywords = ["prometheus", "pushgateway", "metrics", "oberservability"]
