--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,23 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --verbose --features blocking
+      run: cargo build --verbose --no-default-features --features with_reqwest,prometheus_crate
     - name: Run tests
-      run: cargo test --verbose --features blocking
+      run: cargo test --verbose --no-default-features --features with_reqwest,prometheus_crate
+
+    - name: Build
+      run: cargo build --verbose --no-default-features --features with_reqwest,prometheus_client_crate
+    - name: Run tests
+      run: cargo test --verbose --no-default-features --features with_reqwest,prometheus_client_crate
+
+    - name: Build
+      run: cargo build --verbose --no-default-features --features with_reqwest_blocking,prometheus_crate
+    - name: Run tests
+      run: cargo test --verbose --no-default-features --features with_reqwest_blocking,prometheus_crate
+
+
+    - name: Build
+      run: cargo build --verbose --no-default-features --features with_reqwest_blocking,prometheus_client_crate
+    - name: Run tests
+      run: cargo test --verbose --no-default-features --features with_reqwest_blocking,prometheus_client_crate
 
