--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ features = ["blocking", "with_reqwest", "with_reqwest_blocking"]
 url = "2.4"
 async-trait = { version = "0.1", optional = true }
 prometheus = {version = "0.13", optional = true }
+prometheus-client = { version = "0.22", default-features = false, optional = true }
 reqwest = { version = "0.11", default-features = false, optional = true }
 log = { version = "0.4", default-features = false, optional = true }
 
@@ -25,5 +26,6 @@ default = ["non_blocking"]
 non_blocking = ["async-trait"]
 blocking = []
 prometheus_crate = ["prometheus"]
+prometheus_client_crate = ["prometheus-client"]
 with_reqwest = ["non_blocking", "reqwest", "log"]
 with_reqwest_blocking = ["blocking", "reqwest/blocking", "log"]
