--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -17,11 +17,4 @@ jobs:
       - name: Install Clippy
         run: rustup component add clippy
       - name: Run Clippy
-        run: cargo clippy --no-default-features --features with_reqwest,prometheus_crate -- -D warnings
-      - name: Run Clippy
-        run: cargo clippy --no-default-features --features with_reqwest,prometheus_client_crate -- -D warnings
-      - name: Run Clippy
-        run: cargo clippy --no-default-features --features with_reqwest_blocking,prometheus_crate -- -D warnings
-      - name: Run Clippy
-        run: cargo clippy --no-default-features --features with_reqwest_blocking,prometheus_client_crate -- -D warnings
-
+        run: cargo clippy --all-features -- -D warnings
