--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ prometheus-client = { version = "0.22", default-features = false, optional = tru
 reqwest = { version = "0.12", default-features = false, optional = true }
 log = { version = "0.4", default-features = false, optional = true }
 
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full"] }
+mockito = "1.4"
+
 [features]
 default = ["non_blocking"]
 non_blocking = []
